--- a/Report.ipynb
+++ b/Report.ipynb
@@ -474,6 +474,7 @@
     "\n",
     "model.learn(total_timesteps=1000)\n",
     "\n",
+    "#model.save(\"ppo_mario\")\n",
     "\n",
     "# Evaluate the agent\n",
     "#mean_reward, std_reward = evaluate_policy(model, model.get_env(), n_eval_episodes=10)\n",
