--- a/Report.ipynb
+++ b/Report.ipynb
@@ -1391,7 +1391,7 @@
    "id": "52f7fa66",
    "metadata": {},
    "source": [
-    "![image](images/q_27000.gif)\n",
+    "![image](https://raw.githubusercontent.com/seel6470/CSPB-3202-Final-Project/main/images/q_27000.gif)\n",
     "\n",
     "WIth only 27,000 training episodes, the Q Learning algorithm is able to take advantage of the height reward and is clearing the tall pipes and the first gap. Given enough iterations, I believe this algorithm would show similar, if not better results than our PPO algorithm. However, it took almost 24 hours to just get this number of iterations when I could get 20 times the number of episodes with the PPO algorithm.\n",
     "\n",
