--- a/Report.ipynb
+++ b/Report.ipynb
@@ -846,7 +846,7 @@
     "\n",
     "![image](https://raw.githubusercontent.com/seel6470/CSPB-3202-Final-Project/main/images/ppo_final.gif)\n",
     "\n",
-    "This reward function seems to work as intedned and the model learns with quite a bit of stability. Given enough iterations, I believe the model would continue to improve and progress farther into the game.\n",
+    "This reward function seems to work as intended and the model learns with quite a bit of stability. Given enough iterations, I believe the model would continue to improve and progress farther into the game.\n",
     "\n"
    ]
   },
@@ -879,7 +879,7 @@
    "source": [
     "We can begin by creating the same wrappers as before. Initially, I used these wrappers for the Q-Learning model and applied them to the PPO model after the fact. We again skip 4 frames, rescale and reduce the images to gray scale while stacking 4 frames. I am also including the previous reward wrapper used in the PPO model before applying all these wrappers together in the function `apply_wrappers` that returns the environment utilizing all of the environment wrappers.\n",
     "\n",
-    "One note is that the following algorithm requires gym version 0.24.0 as the returns of the reset function need to be a single value, as opposed to the tuple returned in later versions. Overriding the reset function does not work, as several of the necessary wraooers and Python modules are not compatible with the newer versions of gym. If you are attempting to run this cell, you will receive an error unless you run `pip install gym==0.24.0` first."
+    "One note is that the following algorithm requires gym version 0.24.0 as the returns of the reset function need to be a single value, as opposed to the tuple returned in later versions. Overriding the reset function does not work, as several of the necessary wrappers and Python modules are not compatible with the newer versions of gym. If you are attempting to run this cell, you will receive an error unless you run `pip install gym==0.24.0` first."
    ]
   },
   {
