--- a/Report.ipynb
+++ b/Report.ipynb
@@ -40,7 +40,11 @@
     "\n",
     "For my project, I chose to teach a learning model to play the original Super Mario Bros. game for the NES. I utilized a library created by Christian Kauten called gym-super-mario-bros, which provides an OpenAI Gym environment using the nes-py emulator [(Kauten, 2018)](#references). The challenge is to beat as many levels as possible in the original Mario game for NES with the following rules of the game.\n",
     "\n",
-    "To start, I will create a random agent (choosing actions randomly), then a heuristic agent that chooses actions based on a given strategy, and finally two reinforcement learning models to compare against each other: a proximal policy optimization (PPO) model and a Q-Learning model. The goal will be to create stable learning environments for both of these models and see how each agent performs in the game environment.\n",
+    "To start, I will create a random agent (choosing actions randomly), then a heuristic agent that chooses actions based on a given strategy, and finally two reinforcement learning models to compare against each other: a proximal policy optimization (PPO) model and a Q-Learning model. \n",
+    "\n",
+    "The main difference between PPO and Q-Learning will be in their approach to policy optimization and exploration. PPO is a policy-based method that directly optimizes actions, mapping the best action to take for any given game state. Q-Learning is value-based, focusing on learning state-action values. Because of this, PPO is better at determining continuous action spaces, whereas Q-Learning is better suited for discrete action spaces. Since Super Mario Bros. would represent a continuous action space with fluid movement between frames, I would anticipate the PPO model to be more effective, but it will be interesting to compare the results of each.\n",
+    "\n",
+    "The goal will be to create stable learning environments for both of these models and see how each agent performs in the game environment.\n",
     "\n",
     "### Rules of the Game\n",
     "\n",
@@ -519,12 +523,12 @@
     "env.reset = gymnasium_reset.__get__(env, JoypadSpace)\n",
     "\n",
     "env = StepAPICompatibility(env, output_truncation_bool=True)\n",
-    "#env = CustStepReward(env)\n",
+    "env = CustStepReward(env)\n",
     "\n",
-    "#env = SkipFrame(env, skip=4)\n",
-    "#env = ResizeObservation(env, shape=84) # reduce size of frame image\n",
-    "#env = GrayScaleObservation(env) # create grayscale images\n",
-    "#env = FrameStack(env, num_stack=8, lz4_compress=True) # stack frames\n",
+    "env = SkipFrame(env, skip=4)\n",
+    "env = ResizeObservation(env, shape=84) # reduce size of frame image\n",
+    "env = GrayScaleObservation(env) # create grayscale images\n",
+    "env = FrameStack(env, num_stack=8, lz4_compress=True) # stack frames\n",
     "\n",
     "model = PPO(\n",
     "    'CnnPolicy',      # Use a convolutional neural network\n",
@@ -1213,13 +1217,13 @@
     "\n",
     "This is then minimized using backpropagation in\n",
     "```python\n",
-    "loss.backward(); self.optimizer.step() in learn())`.\n",
+    "loss.backward(); self.optimizer.step() in learn())\n",
     "```\n",
     "\n",
     "The agent selects actions using an epsilon-greedy policy  as seen in the `choose_action()` function, where the epsilon value represents the probability the model chooses a random action, selecting the action with the highest Q-value the rest of the time. This epsilon value decays overtime as seen here:\n",
     "\n",
     "```python\n",
-    "self.epsilon = max(self.epsilon * self.eps_decay, self.eps_min`\n",
+    "self.epsilon = max(self.epsilon * self.eps_decay, self.eps_min\n",
     "```\n",
     "\n",
     "To stabilize learning, the agent periodically synchronizes the target network with the online network `self.sync_networks()`, copying the weights from the online network to the target network after a certain number of steps.\n",
@@ -1395,10 +1399,9 @@
     "\n",
     "WIth only 27,000 training episodes, the Q Learning algorithm is able to take advantage of the height reward and is clearing the tall pipes and the first gap. Given enough iterations, I believe this algorithm would show similar, if not better results than our PPO algorithm. However, it took almost 24 hours to just get this number of iterations when I could get 20 times the number of episodes with the PPO algorithm.\n",
     "\n",
+    "Since the main difference between PPO and Q-Learning, besides the processing time, has to do with how they handle discrete/continuous action spaces, limiting the number of chosen actions may have improved the Q-Learning algorithm. Even though the game-state is continuous and the controls for Mario can be very complex and nuanced, the limitation of either Running right (right + B) or jumping right (right + B + A) in addition to the frame skipping would have hopefully simplified the gamestate to be more similar to a discrete action state and likely improved the performance of the model.\n",
     "\n",
-    "The main difference between PPO and Q-Learning, besides the processing time, is in their approach to policy optimization and exploration. PPO is a policy-based method that directly optimizes actions, mapping the best action to take for any given game state. Q-Learning is value-based, focusing on learning state-action values. Because of this, PPO is better at determining continuous action spaces, whereas Q-Learning is better suited for discrete action spaces. Limiting the number of chosen actions to only those that allow Mario to progress (right + B + A and right + B) may have worked well for both models given it creates a more discrete action space.\n",
-    "\n",
-    "My initial PPO algorithm was more prone to exploitation, which caused me to fine-tune the environment's reward value function and incorporate an entropy coefficient to encourage the agent to explore. In the same way, Q-Learning uses an epsilon greedy function that chooses a random action some of the time, taking the the action with the highest q-value the rest of the time. Using the more balanced reward function and set of actions taken from tuning the PPO algorithm assisted in stabilizing the Q-Learning model without as much trial and error. This was significant, especially given the the costly time to process the Q-Learning model as opposed to the PPO model.\n",
+    "Additionally, initial PPO algorithm was more prone to exploitation, which caused me to fine-tune the environment's reward value function and incorporate an entropy coefficient to encourage the agent to explore. In the same way, Q-Learning uses an epsilon greedy function that chooses a random action some of the time, taking the the action with the highest q-value the rest of the time. Using the more balanced reward function and set of actions taken from tuning the PPO algorithm assisted in stabilizing the Q-Learning model without as much trial and error. This was significant, especially given the the costly time to process the Q-Learning model as opposed to the PPO model.\n",
     "\n",
     "In contrast, optimizations I found for the Q-Learning model to decrease computational complexity, such as frame skipping/stacking, image size reduction, grayscaling and not to mention configuring the modules to use the GPU, were able to be applied to the PPO model, making it even faster and allowing me to run even more iterations to easily fine tune the parameters and check the results."
    ]
@@ -1457,7 +1460,7 @@
     "\n",
     "It would be interesting to see how much the Q-Learning agent would improve given the same number of iterations the PPO model was able to make and compare them side by side. Additionally, I have seen other projects, like [this one by William Wei](https://github.com/yumouwei/super-mario-bros-reinforcement-learning), that use custom wrappers that are able to read and interpret the memory of the Super Mario Bros environment to be able to have even more information for the agent to utilize, determining the locations of enemies, blocks, pits, etc [(Yumouwei, 2023)](#references).\n",
     "\n",
-    "Given additional time, I like to see how well the agent would be able to improve with this information. This in combination with using random stage selection could also allow the model to be able to create a more generalized optimal policy that could assist in beating many levels of the game. As it is, my model seems to be making progress very slowly as it learns from trial and error as opposed to dynamically \"seeing\" information in the game state and choosing actions accordingly."
+    "Given additional time, I would like to see how well the agent would be able to improve with this information. This in combination with using random stage selection could also allow the model to be able to create a more generalized optimal policy that could assist in beating many levels of the game. As it is, my model seems to be making progress very slowly as it learns from trial and error as opposed to dynamically \"seeing\" information in the game state and choosing actions accordingly."
    ]
   },
   {
@@ -1477,7 +1480,7 @@
     "\n",
     "Kundu, Sourish. (2023). Train AI to beat Super Mario Bros! || Reinforcement learning completely from scratch [Video]. YouTube. https://www.youtube.com/watch?v=_gmQZToTMac\n",
     "\n",
-    "Nintendo. (1985). Super Mario Bros. Instruction Manual. Nintendo of America Inc. Retrieved from [https://www.nintendo.co.jp/clv/manuals/en/pdf/CLV-P-NAAAE.pdf]\n",
+    "Nintendo. (1985). Super Mario Bros. Instruction Manual. Nintendo of America Inc. Retrieved from https://www.nintendo.co.jp/clv/manuals/en/pdf/CLV-P-NAAAE.pdf\n",
     "\n",
     "Nintendo. (1985). Super Mario Bros. [Video game]. Nintendo. \n",
     "\n",
